table FE nearly done, need to fix z-indexes

--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -46,10 +46,10 @@
 }
 
 .border-radius-closed {
-  border-radius: 20px;
+  border-radius: 25px;
 }
 
 .border-radius-open {
-  border-radius: 20px 20px 0 0;
+  border-radius: 25px 25px 0 0;
 }
 
