--- a/scss/_table.scss
+++ b/scss/_table.scss
@@ -1,6 +1,8 @@
+.bg-light-blue {
+  background-color: #E8F1FF;
+}
 
 .table-container {
-  width: 100%;
   border-radius: 1.5rem;
   box-shadow: 0 0 18px 0 rgba(0,0,0,0.4);
   z-index: 1;
@@ -43,28 +45,15 @@
         div:hover {
           background-color: $table-buttons-color;
         }
-
       }
     }
   }
-  .table{
-    width: 100%;
-    thead {
-      .table-row {
-        padding: 0 25px;
-        th {
-          padding: 20px 5px;
-          text-align: start;
-        }
-      }  
-    }
+
+  table {
+    border-collapse: collapse;
     tbody {
-      .table-row {
-        padding: 0 25px;
-        td {
-          padding: 20px 5px;
-          text-align: start;
-        }
+      tr {
+        border-top: 1px solid rgba(128, 128, 128, 0.1);
       }
     }
   }
