--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -4,6 +4,22 @@
   max-width: 1367px;
 }
 
+.z-index-1 {
+  z-index: 1;
+}
+
+.z-index-2 {
+  z-index: 2;
+}
+
+.z-index-3 {
+  z-index: 3;
+}
+
+.z-index-4 {
+  z-index: 4;
+}
+
 //Margin & Padding classes
 
 $spaceAmounts: (1, 2, 3, 4, 5);
@@ -29,6 +45,14 @@ $spaceAmounts: (1, 2, 3, 4, 5);
 
   .mb-#{$space}{
     margin-bottom: #{$space}rem;
+  }
+
+  .ml-#{$space}{
+    margin-left: #{$space}rem;
+  }
+
+  .mr-#{$space}{
+    margin-right: #{$space}rem;
   }
 
   .p-#{$space}{
